@@ -1,0 +1,30 @@
+#!/usr/bin/perl
+
+use EPrints;
+
+my $session = new EPrints::Session;
+exit( 0 ) unless( defined $session );
+
+print_xsd( $session );
+
+$session->terminate;
+
+sub print_xsd
+{
+	my( $session ) = @_;
+
+	my $dataset = $session->get_repository->get_dataset( "metafield" );
+
+	my $plugin = $session->plugin( "Export::XML_Schema" );
+
+	my $list = EPrints::List->new(
+		dataset => $dataset,
+		session => $session,
+		ids=>["ALL"] );
+
+	$session->send_http_header( "content_type" => "application/xml" );
+	$plugin->initialise_fh( \*STDOUT );
+	$plugin->output_list( list=>$list, fh=>*STDOUT );
+
+	$list->dispose;
+}
