@@ -653,11 +653,11 @@ sub render_xml_schema_type
 
 	my $type = $session->make_element( "xs:complexType", name => $self->get_xml_schema_type );
 
-	my $all = $session->make_element( "xs:all", minOccurs => "0" );
+	my $all = $session->make_element( "xs:all" );
 	$type->appendChild( $all );
 	foreach my $part ( @PARTS )
 	{
-		my $element = $session->make_element( "xs:element", name => $part, type => "xs:string" );
+		my $element = $session->make_element( "xs:element", name => $part, type => "xs:string", minOccurs => "0" );
 		$all->appendChild( $element );
 	}
 
